welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: reassignment to val
			return isFacingTrail=true
                                            ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if (getCouleurSol()==Color.green)
                ^